--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
-        "turso/libsql": "^0.2.5"
+        "plesk/ext-laravel-integration": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
